--- a/src/App.css
+++ b/src/App.css
@@ -9,23 +9,23 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 50s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #07e980;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(146, 126, 126);
 }
 
 .App-link {
-  color: #61dafb;
+  color: salmon;
 }
 
 @keyframes App-logo-spin {
